[gd_scene load_steps=13 format=3 uid="uid://bk2si826vw5gq"]

[ext_resource type="AudioStream" uid="uid://d3pgyito0wwlo" path="res://assets/sounds/snd_pickup.wav" id="1_3mqme"]
[ext_resource type="Script" path="res://src/system/global_sounds.gd" id="1_30nx8"]
[ext_resource type="AudioStream" uid="uid://dx64khttwmwll" path="res://assets/sounds/snd_background_loop.wav" id="2_c032j"]
[ext_resource type="AudioStream" uid="uid://5f7u1iwxfcqf" path="res://assets/sounds/snd_heal.wav" id="3_kbel8"]
[ext_resource type="AudioStream" uid="uid://bl403oaocu4ml" path="res://assets/sounds/snd_jump.wav" id="4_3xte4"]
[ext_resource type="AudioStream" uid="uid://c5yqiaccqqrfc" path="res://assets/sounds/snd_damage.mp3" id="4_kvjkw"]
[ext_resource type="AudioStream" uid="uid://bcv8r6w386rxa" path="res://assets/sounds/snd_drop_item.wav" id="4_uq1sf"]
[ext_resource type="AudioStream" uid="uid://bpda2wxwc0qcg" path="res://assets/sounds/snd_door_open.wav" id="5_i6e84"]
[ext_resource type="AudioStream" uid="uid://dbv7gu6w3xve7" path="res://assets/sounds/snd_interact.ogg" id="5_im0l7"]
[ext_resource type="AudioStream" uid="uid://x16dcqm1scb3" path="res://assets/sounds/snd_door_enter.wav" id="6_nfc1i"]
[ext_resource type="AudioStream" uid="uid://d3ox8x1b3h5f3" path="res://assets/sounds/snd_ui_open.wav" id="8_xhfc6"]
[ext_resource type="AudioStream" uid="uid://d1xkm4tjx8qvp" path="res://assets/sounds/snd_alarm.wav" id="9_tlvki"]

[node name="sys_global_sounds" type="Node"]
process_mode = 3
script = ExtResource("1_30nx8")

[node name="background_loop" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_c032j")
volume_db = -20.0
autoplay = true

[node name="pickup" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_3mqme")

[node name="jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_3xte4")
volume_db = -20.0
pitch_scale = 2.0

[node name="interact" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_im0l7")
volume_db = -10.0

[node name="drop_item" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_uq1sf")
volume_db = -10.0

[node name="heal" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_kbel8")

[node name="damage" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_kvjkw")
volume_db = -25.0

[node name="door_open" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_i6e84")

[node name="door_enter" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_nfc1i")

[node name="alarm" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_tlvki")
volume_db = -30.0
pitch_scale = 2.0

[node name="ui_open" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_xhfc6")
volume_db = -30.0
pitch_scale = 4.0
bus = &"UI"
